@@ -7,6 +7,8 @@ from globals import *
 import graphics as gfx
 
 import numbers
+import sight
+
 import random
 
 FAR_TEXT = ['You hear @t to the @d.']
@@ -20,17 +22,38 @@ def create(position, volume, close_text, far_text, **sound):
 
 def _spread(noise):
 	for alife in LIFE.values():
+		if sight.can_see_position(alife, noise['pos']):
+			continue
+		
 		_dist = numbers.distance(noise['pos'], alife['pos'])
 		
 		if _dist>noise['volume']:
 			continue
 		
+		_direction_to = numbers.direction_to(alife['pos'], noise['pos'])
+		if abs(_direction_to)<22 or abs(_direction_to-360)<22:
+			_direction = 'east'
+		elif abs(_direction_to-45)<22:
+			_direction = 'northeast'
+		elif abs(_direction_to-90)<22:
+			_direction = 'north'
+		elif abs(_direction_to-135)<22:
+			_direction = 'northwest'
+		elif abs(_direction_to-180)<22:
+			_direction = 'west'
+		elif abs(_direction_to-225)<22:
+			_direction = 'southwest'
+		elif abs(_direction_to-270)<22:
+			_direction = 'south'
+		elif abs(_direction_to-315)<22:
+			_direction = 'southeast'
+		
 		#TODO: Check walls between positions
 		#TODO: Add memory
 		if _dist >=noise['volume']/2:
 			if 'player' in alife:
-				gfx.message(random.choice(FAR_TEXT).replace('@t', noise['text'][1]).replace('@d', 'north'))
+				gfx.message(random.choice(FAR_TEXT).replace('@t', noise['text'][1]).replace('@d', _direction))
 		else:
 			if 'player' in alife:
-				gfx.message(random.choice(FAR_TEXT).replace('@t', noise['text'][0]).replace('@d', 'north'))
+				gfx.message(random.choice(FAR_TEXT).replace('@t', noise['text'][0]).replace('@d', _direction))
 				
