@@ -149,7 +149,7 @@ def fire(life, target, limb=None):
 	
 	direction = numbers.direction_to(life['pos'],target)+(random.uniform(-life['recoil'], life['recoil']))
 	
-	alife.noise.create(life['pos'], 30, '%s fire', 'something discharge')
+	alife.noise.create(life['pos'], 120, '%s fire' % weapon['name'], 'something discharge')
 	
 	#TODO: Clean this up...
 	_bullet = items.get_item_from_uid(_feed['rounds'].pop())
